--- a/dev-ops/pom.xml
+++ b/dev-ops/pom.xml
@@ -9,8 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-
-    <artifactId>OpenAI-SDK</artifactId>
+    <artifactId>dev-ops</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
