使用Sa-Token完成简易登陆鉴权

--- a/dev-ops/nginx/conf.d/openai-project.conf
+++ b/dev-ops/nginx/conf.d/openai-project.conf
@@ -26,7 +26,7 @@ server {
             set $query $1;
         }
         # 验证成功，返回200 OK
-        proxy_pass http://198.18.0.1:8080/verify?$query;
+        proxy_pass http://198.18.0.1:8080/login?$query;
         # 发送原始请求
         proxy_pass_request_body off;
         # 清空 Content-Type
