--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>openai-api</module>
         <module>dev-ops</module>
+        <module>openai-sdk</module>
     </modules>
 
     <properties>
